--- a/file1.ipynb
+++ b/file1.ipynb
@@ -16,6 +16,35 @@
    "source": [
     "print(\"hi\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "list1=[1,2,3]\n",
+    "print(list1)\n",
+    "array1=np.array(list1)\n",
+    "print(array1)"
+   ]
   }
  ],
  "metadata": {
