--- a/file1.ipynb
+++ b/file1.ipynb
@@ -19,14 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +37,35 @@
     "print(list1)\n",
     "array1=np.array(list1)\n",
     "print(array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     city office  revenue\n",
+      "0   tokyo  north      110\n",
+      "1   paris   east      103\n",
+      "2  sidney   west      145\n",
+      "3   osaka  south      190\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "city=['tokyo','paris','sidney','osaka']\n",
+    "office=['north','east','west','south']\n",
+    "sales=[110,103,145,190]\n",
+    "\n",
+    "offices=dict(city=city,office=office,revenue=sales)\n",
+    "revenue=pd.DataFrame(offices)\n",
+    "\n",
+    "print(revenue.head())"
    ]
   }
  ],
