--- a/file1.ipynb
+++ b/file1.ipynb
@@ -26,6 +26,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[11 22 33 44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "list2=[11,22,33,44]\n",
+    "arr1=np.array(list2)\n",
+    "print(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1, 2, 3]\n",
       "[1 2 3]\n"
      ]
