--- a/file1.ipynb
+++ b/file1.ipynb
@@ -39,10 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "dimensions :  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "array2d = np.array([[1, 2, 3],[4, 5 ,6],[7,8,9]])\n",
+    "print(array2d)\n",
+    "print('dimensions : ',array2d.ndim)"
+   ]
   },
   {
    "cell_type": "code",
